--- a/src/test/resources/path.properties
+++ b/src/test/resources/path.properties
@@ -2,5 +2,6 @@
 Xlpath:.\\src\\test\\resources\\TestData\\DataExcel.xlsx
 
 #Schema Validation routes
-programjson: .\\src\\test\\resources\\schema\\program\\programSchema.json
+programPostjson: .\\src\\test\\resources\\schema\\program\\programPostSchema.json
+programPutjson: .\\src\\test\\resources\\schema\\program\\programPutSchema.json
 AssignSubmitjson: .\\src\\test\\resources\\schema\\assignmentsubmit\\assignmentsubpost
