--- a/src/test/resources/path.properties
+++ b/src/test/resources/path.properties
@@ -2,6 +2,10 @@
 Xlpath:.\\src\\test\\resources\\TestData\\DataExcel.xlsx
 
 #Schema Validation routes
-programPostjson: .\\src\\test\\resources\\schema\\program\\programPostSchema.json
-programPutjson: .\\src\\test\\resources\\schema\\program\\programPutSchema.json
-AssignSubmitjson: .\\src\\test\\resources\\schema\\assignmentsubmit\\assignmentsubpost
+
+programjson: .\\src\\test\\resources\\schema\\program\\programSchema.json
+
+
+AssignSubmitPostjson: .\\src\\test\\resources\\schema\\assignmentsubmit\\assignmentsubpost.json
+AssignSubUserIDjson: .\\src\\test\\resources\\schema\\assignmentsubmit\\assignmentsubUserID.json
+AssignSubGradeIDjson: .\\src\\test\\resources\\schema\\assignmentsubmit\\assignmentsubgradeID.json
