--- a/src/test/resources/path.properties
+++ b/src/test/resources/path.properties
@@ -3,7 +3,7 @@ Xlpath:.\\src\\test\\resources\\TestData\\DataExcel.xlsx
 
 #Schema Validation routes
 
-programjson: .\\src\\test\\resources\\schema\\program\\programSchema.json
+programPostjson: .\\src\\test\\resources\\schema\\program\\programPostSchema.json
 
 
 AssignSubmitPostjson: .\\src\\test\\resources\\schema\\assignmentsubmit\\assignmentsubpost.json
