With all 15 scenarios positive and negative

--- a/src/test/resources/path.properties
+++ b/src/test/resources/path.properties
@@ -2,7 +2,7 @@
 Xlpath = .\\src\\test\\resources\\TestData\\DataExcel.xlsx
 
 #Schema Validation routes
-postbatchJson = .\\src\\test\\resources\\Schema\\postbatch.json
-getbatchIDJson = .\\src\\test\\resources\\Schema\\getbatchbyID.json
-getbatchbynameJson = .\\src\\test\\resources\\Schema\\getbatchbyname.json
-batchupdatebyIDJson = .\\src\\test\\resources\\Schema\\updatebybatchID.json
+postbatchJson = .\\src\\test\\resources\\schema\\postbatch.json
+getbatchIDJson = .\\src\\test\\resources\\schema\\getbatchbyID.json
+getbatchbynameJson = .\\src\\test\\resources\\schema\\getbatchbyname.json
+batchupdatebyIDJson = .\\src\\test\\resources\\schema\\updatebybatchID.json
