--- a/src/test/resources/path.properties
+++ b/src/test/resources/path.properties
@@ -10,8 +10,8 @@ getAllUserjson:.\\src\\test\\resources\\schema\\User\\getAllUser.json
 getUserByIDjson:.\\src\\test\\resources\\schema\\User\\getUserByID.json
 getUserByRolejson:.\\src\\test\\resources\\schema\\User\\getUserByRoles.json
 postUserjson:.\\src\\test\\resources\\schema\\User\\postUser.json
-putUserByIdjson:.\\src\\test\\resources\schema\User\putUserById.json
-putUserStatusRolejson:.\\src\\test\resources\\schema\\User\\putUserStatusRole.json
+putUserByIdjson:.\\src\\test\\resources\\schema\\User\\putUserById.json
+putUserStatusRolejson:.\\src\\test\\resources\\schema\\User\\putUserStatusRole.json
 
 batchPostjson:.\\src\\test\\resources\\schema\\Batch\\batchPost.json
 #batchPostjson:.\\src\test\resources\schema\Batch\batchPost.json
