--- a/src/test/resources/path.properties
+++ b/src/test/resources/path.properties
@@ -3,6 +3,8 @@ Xlpath = .\\src\\test\\resources\\TestData\\DataExcel.xlsx
 
 #Schema Validation routes
 postAssignmentJson = .\\src\\test\\resources\\schema\\PostRequest.json
+GetByIdJson=.\\src\\test\\resources\\schema\\GetById.json
+PutUpdateJson=.\\src\\test\\resources\\schema\\PutUpdate.json
 #getbatchIDJson = .\\src\\test\\resources\\Schema\\getbatchbyID.json
 #etbatchbynameJson = .\\src\\test\\resources\\Schema\\getbatchbyname.json
 #batchupdatebyIDJson = .\\src\\test\\resources\\Schema\\updatebybatchID.json
