--- a/src/test/resources/path.properties
+++ b/src/test/resources/path.properties
@@ -3,15 +3,19 @@ Xlpath:.\\src\\test\\resources\\TestData\\DataExcel.xlsx
 
 #Schema Validation routes
 
+#program schema
 programPostSchemajson: .\\src\\test\\resources\\schema\\programjson\\programPostSchema.json
 programPutSchemajson: .\\src\\test\\resources\\schema\\programjson\\programPutSchema.json
 
+
+#batch schema
 postbatchJson = .\\src\\test\\resources\\schema\\Batchjson\\postbatch.json
 getbatchIDJson = .\\src\\test\\resources\\schema\\Batchjson\\getbatchbyID.json
 getbatchbynameJson = .\\src\\test\\resources\\schema\\Batchjson\\getbatchbyname.json
 batchupdatebyIDJson = .\\src\\test\\resources\\schema\\Batchjson\\updatebybatchID.json
 
 
+#user schema
 getAllUserjson:.\\src\\test\\resources\\schema\\Userjson\\getAllUser.json
 getUserByIDjson:.\\src\\test\\resources\\schema\\Userjson\\getUserByID.json
 getUserByRolejson:.\\src\\test\\resources\\schema\\Userjson\\getUserByRoles.json
@@ -20,11 +24,13 @@ putUserByIdjson:.\\src\\test\\resources\\schema\\Userjson\\putUserById.json
 putUserStatusRolejson:.\\src\\test\\resources\\schema\\Userjson\\putUserStatusRole.json
 
 
+#assignment schema
 postAssignmentJson = .\\src\\test\\resources\\schema\\assignmentjson\\PostRequest.json
 GetByIdJson=.\\src\\test\\resources\\schema\\assignmentjson\\GetById.json
 PutUpdateJson=.\\src\\test\\resources\\schema\\assignmentjson\\PutUpdate.json
 
 
+#assignment submit schema
 AssignSubmitPostjson: .\\src\\test\\resources\\schema\\assignmentsubmitjson\\assignmentsubpost.json
 AssignSubUserIDjson: .\\src\\test\\resources\\schema\\assignmentsubmitjson\\assignmentsubUserID.json
 AssignSubGradeIDjson: .\\src\\test\\resources\\schema\\assignmentsubmitjson\\assignmentsubgradeID.json
